package Behavioral.Observer.Interface;

public interface NotificationAlertObserver {
    public void update();
}
